# zentory-protocol

./: .gitignore  CHANGELOG.md  COMPETITORS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENTS.md  GITHUB_SETTINGS.md  GO_TO_MARKET.md  LICENSE_BSL_1_1.txt  README.md  REPO_VISIBILITY_POLICY.md  ROADMAP.md  SECURITY.md  SECURITY_HARDENING.md  STATE.md  STRATEGY.md  TEAM.md  TESTER_SANDBOX.md  VAULT_SPOT_EXECUTION_SPEC.md  goal.md  package.json  test_alchemy.py  test_monitor_final.py  test_receipt.py  vercel.json
.github/: CODEOWNERS  (+1 more)
engine/: .gitignore  README.md  pyproject.toml  vault-trading-map.example.json
engine/.pytest_cache/v/cache/: nodeids
engine/scripts/: deploy_signal_network.py  index_strategy_executor_events.py  poll_hyperliquid_fills.py  sign_trade_signal.py
engine/src/execution/: __init__.py  hyperliquid_executor.py  lumibot_broker.py  main.py
engine/src/genetic_programming/: __init__.py  chromosome.py  fitness.py  population.py
engine/src/monitor/: .monitor_state.json  event_monitor.py
engine/src/signals/: __init__.py  executor.py  gp_provider.py  interface.py  lumibot_provider.py  manual_provider.py  router.py  signer.py
engine/src/strategy/: __init__.py  regime_detector.py  signal_generator.py  trend_follower.py
engine/src/venue/: __init__.py  hyperliquid_info.py  price_fetcher.py
engine/src/zentory_engine/: __init__.py
engine/src/zentory_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine/tests/: test_api_security.py  test_digest_parity.py  test_genetic_programming.py  test_import.py  test_strategy.py
(+298 files in other folders)
