[project]
name = "zentory-engine"
version = "0.1.0"
description = "Zentory Protocol Genetic Programming Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.25.0",
    "web3>=6.15.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "eth-account>=0.10.0",
    "eth-typing>=4.0.0",
    "ipfshttpclient>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "hypothesis>=6.88.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools.packages.find]
where = ["src"]
